faster page transition, mostly working sidebar, working user_wall, office icons, float field,

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -74,8 +74,8 @@ template(name='icon_view')
 
 
 template(name='i')
-    img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
-    //- img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
+    //- img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
 
 template(name='ismall')
@@ -201,7 +201,7 @@ template(name='image_edit')
                         .btn Take Photo (switch camera to front)
                             input(type='file' name='upload_image' accept='image/*' capture='user')
                 else            
-                    input(type='file' name='upload_image' accept='image/*' capture='user')
+                    input(type='file' name='upload_image' accept='image/*' )
 
 template(name='image_link_edit')
     .ui.fluid.input
@@ -321,17 +321,17 @@ template(name='document_view')
     |!{referenced_document.content}
         
 template(name='text_edit')
+    .ui.header
+        if icon
+            +i name=icon
+        if title
+            |#{title}
+        else if label
+            |#{label}
+        else if key
+            |#{key}
+            //- +clear_value
     .ui.fluid.icon.input
-        .ui.inline.header
-            if icon
-                +i name=icon
-            if title
-                |#{title}
-            else if label
-                |#{label}
-            else if key
-                |#{key}
-        //- +clear_value
         input.edit_text(type='text' value=field_value placeholder=placeholder autocomplete="off")
         
 
@@ -487,6 +487,39 @@ template(name='number_edit')
             
             
 template(name='number_view')
+    if field_value
+        div
+        if icon
+            +i name=icon classes='ui inline mini image'
+        .ui.inline.header
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            else if key
+                |#{key}
+            else
+                |#{this}
+        .ui.inline.large.header &nbsp; #{field_value}
+
+
+template(name='float_edit')
+    div
+    .ui.inline.header(title=tip)
+        if icon
+            +i name=icon
+            //- i.grey.icon(class=icon)
+        if title
+            |#{title}
+        else if label
+            |#{label}
+        else
+            |#{key}
+    //- +clear_value    
+    .ui.input            
+        input.edit_float(type='number' value=field_value placeholder=placeholder autocomplete="off")
+            
+template(name='float_view')
     if field_value
         div
         if icon
@@ -841,7 +874,7 @@ template(name='single_doc_edit')
     each choices
         .ui.circular.compact.button.select_choice(class=choice_class)
             if icon
-                +i name=icon classes='ui mini inline image'
+                +i name=icon classes='ui avatar image'
                 //- +i name=icon classes='ui mini inline image'
             |#{calculated_label}
             |#{slug}
@@ -856,7 +889,7 @@ template(name='multi_doc_edit')
     each choices
         .ui.circular.compact.small.button.select_choice(class=choice_class)
             if icon
-                +i name=icon classes='ui mini inline image'
+                +i name=icon classes='ui avatar image'
             //- |#{title} #{slug}
             |#{slug}
     //- .ui.sub.header 
