--- a/client/front.jade
+++ b/client/front.jade
@@ -123,6 +123,6 @@ template(name='water_status')
             i.green.checkmark.big.icon
         else    
             i.red.ban.big.icon
-    with latest_reading
-        | #{temperature}&#8457;
-    div
+    //- with latest_reading
+    //-     | #{temperature}&#8457;
+    //- div
