--- a/client/nav.jade
+++ b/client/nav.jade
@@ -3,8 +3,8 @@ template(name='nav')
         //- .ui.borderless.attached.big.inverted.menu.topnav
         //- .ui.attached.borderless.inverted.large.menu.topnav.grgold
         .ui.attached.borderless.inverted.large.menu.topnav
-            //- a.toggle_sidebar.icon.item.sidebar_on
-            //-     i.large.sidebar.icon
+            .pointer.toggle_sidebar.icon.item.sidebar_on
+                i.large.sidebar.icon
             if is_loading
                 .icon.item
                     i.big.loading.grey.yin.yang.icon
