--- a/client/styles.css
+++ b/client/styles.css
@@ -11,6 +11,14 @@ body {
     font-size: 4em !important;
 }
 
+
+.checking_in_area {
+    padding-top: 0px !important;
+}
+.checkin_toprow {
+    padding-bottom: 0px !important;
+}
+
 .accordion {
     border-radius: 10px !important;
 }
