--- a/components/admin/sidebar.jade
+++ b/components/admin/sidebar.jade
@@ -1,5 +1,5 @@
 template(name='sidebar')
-    .ui.left.inline.vertical.thin.sidebar.inverted.fixed.menu
+    .ui.left.inline.vertical.sidebar.inverted.fixed.menu
         a.header.toggle_sidebar.item(href='/' class="{{isActivePath '/'}}") 
             i.home.icon
             |Gold Run
@@ -7,55 +7,54 @@ template(name='sidebar')
         a.toggle_sidebar.item(href='/readings' class="{{isActivePath '/readings'}}")
             i.theme.icon
             | Readings
-        a.toggle_sidebar.item(href='/lostfound' class="{{isActivePath '/lostfound'}}")
-            i.random.icon
-            |Lost and Found
-        a.toggle_sidebar.item(href='/bikes' class="{{isActivePath '/bikes'}}")
-            i.bicycle.icon
-            |Bikes
-        a.toggle_sidebar.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}")
+        //- a.toggle_sidebar.item(href='/lostfound' class="{{isActivePath '/lostfound'}}")
+        //-     i.random.icon
+        //-     |Lost and Found
+        //- a.toggle_sidebar.item(href='/bikes' class="{{isActivePath '/bikes'}}")
+        //-     i.bicycle.icon
+        //-     |Bikes
+        a.toggle_sidebar.item(href='/staff' class="{{isActivePath '/staff'}}")
             i.circle.info.icon
-            |Desk Staff
+            | staff
         a.toggle_sidebar.item(href='/buildings' class="{{isActivePath '/buildings'}}")
             i.building.icon
-            |Buildings
+            | buildings
         a.toggle_sidebar.item(href='/tasks' class="{{isActivePath '/tasks'}}")
             i.edit.icon
-            |Tasks
+            | tasks
         a.toggle_sidebar.item(href='/keys' class="{{isActivePath '/keys'}}")
             i.key.icon
-            |Keys
-        a.toggle_sidebar.item(href='/people' class="{{isActivePath '/people'}}")
+            | keys
+        a.toggle_sidebar.item(href='/residents' class="{{isActivePath '/residents'}}")
             i.users.icon
-            |People
-        .toggle_sidebar.right.menu
-            if currentUser
-                // a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
-                //     i.line.chart.icon
-                // .ui.simple.dropdown.icon.item
-                //     i.alarm.icon
-                //     .menu
-                //         each notifications
-                //             .item #{text}
-                // a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
-                //     i.mail.icon
-                if is_admin
-                    a.icon.toggle_sidebar.item(href='/admin/members' class="{{isActivePath '/admin/members'}}")
-                        i.configure.icon
-                        |Admin
-                a.toggle_sidebar.item(href="/account/profile/edit/#{currentUser._id}" class="{{isActivePath '/account/profile/edit/#{currentUser._id}'}}")
-                    if currentUser.profile.image_id
-                        img.ui.avatar.image(src="{{c.url currentUser.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
-                    else
-                        i.user.icon
-                    if currentUser.name
-                        | #{currentUser.name}
-                    else
-                        | Profile
-                a#logout.ui.toggle_sidebar.item(href='#') 
-                    i.sign.out.icon
-                    | Sign Out
-            else
-                a.ui.toggle_sidebar.item(href='/sign-in') 
-                    i.sign.in.icon
-                    | Sign In
+            | residents
+        if currentUser
+            // a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
+            //     i.line.chart.icon
+            // .ui.simple.dropdown.icon.item
+            //     i.alarm.icon
+            //     .menu
+            //         each notifications
+            //             .item #{text}
+            // a.icon.item(href='/messages' class="{{isActivePath '/messages'}}")
+            //     i.mail.icon
+            if is_admin
+                a.icon.toggle_sidebar.item(href='/admin/members' class="{{isActivePath '/admin/members'}}")
+                    i.configure.icon
+                    |admin
+            a.toggle_sidebar.item(href="/u/#{currentUser.username}/view" class="{{isActivePath '/account/profile/edit/#{currentUser._id}'}}")
+                if currentUser.profile.image_id
+                    img.ui.avatar.image(src="{{c.url currentUser.kiosk_photo width=50 height=50 gravity='face' crop='fill'}}")
+                else
+                    i.user.icon
+                if currentUser.name
+                    | #{currentUser.name}
+                else
+                    | profile
+            a#logout.ui.toggle_sidebar.item(href='#') 
+                i.sign.out.icon
+                | sign out
+        else
+            a.ui.toggle_sidebar.item(href='/sign-in') 
+                i.sign.in.icon
+                | sign in
