working chat with docs publication, working user_tags, init user_workhistory

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -2,7 +2,7 @@ template(name='nav')
     unless is_frontdesk
         //- .ui.borderless.attached.big.inverted.menu.topnav
         //- .ui.attached.borderless.inverted.large.menu.topnav.grgold
-        .ui.attached.borderless.inverted.large.menu.topnav
+        .ui.attached.borderless.inverted.menu.topnav
             .pointer.toggle_sidebar.icon.item.sidebar_on
                 i.large.sidebar.icon
             if is_loading
