--- a/components/user_sections.jade
+++ b/components/user_sections.jade
@@ -8,6 +8,10 @@ template(name='user_about')
     +link_view key='link' label='link' icon='link' direct=true
 
 
+template(name='user_workhistory')
+    +i name='resume'
+    .ui.header work history
+
 
 template(name='user_payment')
     +text_view key='payment_preferences' label='payment preferences' icon='online-payment-with-a-credit-card' direct=true
@@ -29,10 +33,6 @@ template(name='user_people')
             +follow_user
 
                 
-
-
-
-
 template(name='user_requests')
     .ui.header requests
 
@@ -227,15 +227,25 @@ template(name='user_tags')
     .ui.header 
         +i name='tags'
         |tags
-    each tags
-        .ui.large.basic.label 
-            if is_user
-                i.remove.link.icon.remove_tag
-            |#{this}
-    if user_is_user
-        .ui.fluid.input
-            input.tag_user(type='text' placeholder='tag yourself...')
+    //- each tags
+    //-     .ui.large.basic.label 
+    //-         if is_user
+    //-             i.remove.link.icon.remove_tag
+    //-         |#{this}
+    if is_current_user
+        +array_edit key='tags' label='self tags' direct=true
+        //- .ui.fluid.input
+        //-     input.tag_user(type='text' placeholder='tag yourself...')
     else
+        +array_view key='tags' label='self tags' direct=true
         .ui.header tag #{user_from_username_param.first_name} #{user_from_username_param.last_name}
-        .ui.fluid.input
-            input(type='text' placeholder="tag #{user_from_username_param.name}")
+    unless my_tag_review
+        .ui.large.button.new_tag_review
+            |tag #{user_from_username_param.first_name}
+    each user_tag_reviews
+        .ui.segment
+            if can_edit
+                +array_edit key='tags' label='your tags' direct=true
+            else 
+                +array_view key='tags' label='review tags' direct=true
+            +author_info
