--- a/client/chat.jade
+++ b/client/chat.jade
@@ -10,14 +10,14 @@ template(name='chat_messages_pane')
                 
 template(name='chat_list')
     div
-    .ui.small.inline.header channels
+    .ui.inline.header channels
     .ui.icon.basic.button#create_chat(title='New Channel')
         i.plus.icon
 
     .ui.segments
         each chat_list_items
             +chat_list_item
-    .ui.small.inline.header direct messages
+    .ui.inline.header direct messages
     //- .ui.icon.basic.button#create_private_chat(title='new dm')
     //-     i.plus.icon
 
@@ -42,7 +42,7 @@ template(name='chat_list_item')
                 if private
                     i.lock.icon
                 //- each tags
-                //-     .ui.small.label #{this}
+                //-     .ui.label #{this}
             //- .description
                 // strong {{cutString last_message.body 100}}
                 //- strong {{last_message.body}}
@@ -67,7 +67,7 @@ template(name='private_chat_item')
             .description
                 .ui.header #{title}
                 //- each tags
-                //-     .ui.small.label #{this}
+                //-     .ui.label #{this}
             //- .description
                 // strong {{cutString last_message.body 100}}
                 //- strong {{last_message.body}}
@@ -122,7 +122,7 @@ template(name='view_chats')
                 +cloud filter='chat'
                 //- +participant_filter type='chat'
                 +chat_list
-                //- .ui.small.header viewing: 
+                //- .ui.header viewing: 
                 //-     if viewing_published
                 //-         #view_private_chats.ui.button 
                 //-             i.unhide.icon
@@ -146,29 +146,29 @@ template(name='view_chat')
                 // +minimal_chat_view this
                 +chat_messages_pane this
             .four.wide.column
-                .ui.cloud.segment
-                    .ui.small.header 
-                        i.line.chart.icon
-                        |Stats
-                    //- .ui.small.inline.header #{message_count} messages
-                    //- .ui.small.inline.header #{unread_message_count} unread
+                .ui.basic.segment
+                    .ui.header 
+                        +i name='line chart' classes='ui inline mini image'
+                        |stats
+                    //- .ui.inline.header #{message_count} messages
+                    //- .ui.inline.header #{unread_message_count} unread
                     +text_edit key='title' direct=true
-                    .ui.small.header 
+                    .ui.header 
                         i.align.left.icon
                         |description
                     |!{content}
-                    .ui.small.header
-                        |Participants
+                    .ui.header
+                        |participants
                     if currentUser
                         if in_chat
                             //- i.sign.in.link.icon.leave_chat(title='leave')
                             .ui.basic.button.leave_chat
                                 i.sign.in.icon
-                                |Leave
+                                |leave
                         else
                             .ui.basic.button.join_chat
                                 i.sign.out.icon
-                                |Join
+                                |join
                     .ui.relaxed.list
                         each participants
                             .item
@@ -186,7 +186,7 @@ template(name='view_chat')
                     if can_edit
                         .ui.icon.basic.button.close_chat(title='close chat')
                             i.ban.icon
-                            |Close Chat
+                            |close chat
                     if can_edit
                         +array_edit key='tags' label='tags' direct=true
                     else     
@@ -203,6 +203,6 @@ template(name='view_chat')
                     //- +resonates_list
                     if can_edit
                         +boolean_edit key='private' label='private' direct=true
-                    .ui.small.header Started by 
+                    .ui.header Started by 
                         img.ui.avatar.image(src="{{c.url author.image_id width=400 height=400 gravity='face' crop='fill'}}")
                         |#{author.username} #{when}
