--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title GRO
+    title gro
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -48,5 +48,8 @@ template(name='verification_confirmation')
 
 template(name='not_found')
     .ui.text.container
-        .ui.center.aligned.header Not Found
-        a.ui.button(href="/healthclub") Check In
+        .ui.center.aligned.header not found
+        if is_staff
+            a.ui.button(href="/staff") 
+                +i name='user shield'
+                |staff
