--- a/client/styles.css
+++ b/client/styles.css
@@ -132,7 +132,7 @@ input{
     border-radius: 10px !important;
     margin-bottom: 3px !important;
     margin-top: 3px !important;
-    font-size: 120% !important;
+    /* font-size: 120% !important; */
     /* -moz-border-radius: 50px !important; */
     /* border-radius: 50px !important;
     /* -webkit-border-radius: 5px !important; */
