--- a/components/admin/sidebar.jade
+++ b/components/admin/sidebar.jade
@@ -1,5 +1,5 @@
 template(name='sidebar')
-    .ui.left.inline.vertical.borderless.sidebar.inverted.fixed.menu
+    .ui.left.inline.vertical.borderless.large.sidebar.inverted.fixed.menu
         a.header.toggle_sidebar.item(href='/' class="{{isActivePath '/'}}") 
             i.icon
                 +ismall name='home'
